[workspace]
members = [
  "builder",
  "cli",
  "core",
  "examples/fibonacci/program",
  "examples/fibonacci/script",
  "examples/hello_world/program",
  "examples/hello_world/script",
  "examples/io/program",
  "examples/io/script",
  "examples/wallet/common",
  # Exclude this because it has a feature-flag conflict with the others (noentrypoint)
  #"examples/wallet/program",
  #"examples/wallet/script",
  "ffi/athcon/bindings/rust/athcon-client",
  "ffi/athcon/bindings/rust/athcon-declare",
  "ffi/athcon/bindings/rust/athcon-sys",
  "ffi/athcon/bindings/rust/athcon-vm",
  "ffi/ffitest",
  "ffi/vmlib",
  "helper",
  "interface",
  "runner",
  "sdk",
  "vm/declare",
  "vm/entrypoint",
  "vm/hostfunctions",
  "vm/lib",
  "vm/sdk",
]
exclude = ["examples"]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Lane Rettig <lane@spacemesh.io>"]
repository = "https://github.com/athenavm/athena"
homepage = "https://www.athenavm.org/"
license = "MIT OR Apache-2.0"
edition = "2021"
