[workspace]
members = [
  "builder",
  "cli",
  "core",
  "ffi/athcon/bindings/rust/athcon-client",
  "ffi/athcon/bindings/rust/athcon-declare",
  "ffi/athcon/bindings/rust/athcon-sys",
  "ffi/athcon/bindings/rust/athcon-vm",
  "ffi/vmlib",
  "helper",
  "interface",
  "runner",
  "sdk",
  "vm/entrypoint",
  "vm/hostfunctions",
  "vm/lib",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Lane Rettig <lane@spacemesh.io>"]
repository = "https://github.com/athenavm/athena"
homepage = "https://www.athenavm.org/"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
