[workspace]
members = [
  "builder",
  "cli",
  "core",
  "ffi/athcon/bindings/rust/athcon-client",
  "ffi/athcon/bindings/rust/athcon-declare",
  "ffi/athcon/bindings/rust/athcon-sys",
  "ffi/athcon/bindings/rust/athcon-vm",
  "ffi/vmlib",
  "helper",
  "interface",
  "runner",
  "sdk",
  "tests/host",
  "tests/recursive_call",
  "vm/declare",
  "vm/entrypoint",
  "vm/lib",
  "vm/sdk",
]
exclude = ["examples"]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["Lane Rettig <lane@spacemesh.io>"]
repository = "https://github.com/athenavm/athena"
homepage = "https://www.athenavm.org/"
license = "MIT OR Apache-2.0"
edition = "2021"
