[package]
name = "athena-builder"
description = "Build an Athena program."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
cargo_metadata = "0.18.1"
anyhow = { version = "1.0.92" }
clap = { version = "4.5.20", features = ["derive", "env"] }
