[package]
name = "athena-builder"
description = "Build an Athena program."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
cargo_metadata = "0.19.1"
anyhow = { version = "1.0.93" }
clap = { version = "4.5.21", features = ["derive", "env"] }
