[package]
name = "athena-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
vergen-git2 = { version = "1.0.2", default-features = false, features = [
  "build",
] }

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
athena-sdk = { path = "../sdk" }
athena-builder = { path = "../builder" }
cargo_metadata = "0.19.0"
clap = { version = "4.5.21", features = ["derive", "env"] }
ureq = { version = "2.12.1", features = ["json"] }
indicatif = "0.17.9"
dirs = "5.0"
rand = "0.8"
serde_json = "1.0.133"
yansi = "1.0.1"
hex = "0.4.3"
anstyle = "1.0.10"
target-lexicon = "0.12.14"
tracing-subscriber = "0.3.18"
tracing = "0.1.41"
