[package]
name = "athena-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
vergen-git2 = { version = "1.0.5", default-features = false, features = [
  "build",
] }

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
athena-sdk = { path = "../sdk" }
athena-builder = { path = "../builder" }
cargo_metadata = "0.19.1"
clap = { version = "4.5.31", features = ["derive", "env"] }
reqwest = { version = "0.12.15", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
indicatif = "0.17.11"
dirs = "6.0"
rand = "0.8"
serde_json = "1.0.138"
yansi = "1.0.1"
hex = "0.4.3"
anstyle = "1.0.10"
target-lexicon = "0.13.2"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
