[package]
name = "athena-core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
athena-interface = { path = "../interface" }
bincode = "1.3.3"
ed25519-dalek = "2.1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
elf = "0.7.4"
nohash-hasher = "0.2.0"
rrs-lib = { git = "https://github.com/GregAC/rrs.git" }
cfg-if = "1.0.0"
hex = "0.4.3"
tracing = "0.1.41"
strum_macros = "0.26"
strum = "0.26"
thiserror = "2.0.6"
mockall = "0.13.1"
gdbstub = "0.7.3"

[dev-dependencies]
athena-core = { path = ".", features = ["unittest"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
athena-vm = { path = "../vm/entrypoint" }
athena-vm-sdk = { path = "../vm/sdk" }
parity-scale-codec = "3.6.12"

[features]
debug = []
unittest = []

[build-dependencies]
athena-helper = { path = "../helper" }
