[package]
name = "athena-interface"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1.5.5"
hex = "0.4.3"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
