[package]
name = "athena-runner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3.3"
athcon-sys = { path = "../ffi/athcon/bindings/rust/athcon-sys" }
athcon-vm = { path = "../ffi/athcon/bindings/rust/athcon-vm" }
athena-core = { path = "../core" }
athena-interface = { path = "../interface" }
athena-sdk = { path = "../sdk" }
hex = "0.4.3"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
