[package]
name = "athena-runner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3.3"
athena-core = { path = "../core" }
athena-interface = { path = "../interface" }
athena-sdk = { path = "../sdk" }
hex = "0.4.3"
tracing = "0.1.41"

[dev-dependencies]
athena-runner = { path = ".", features = ["unittest"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
athena-helper = { path = "../helper" }

[features]
unittest = []
