[package]
name = "athena-sdk"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"
athena-core = { path = "../core" }
athena-interface = { path = "../interface" }
bincode = "1.3.3"
tracing = "0.1.41"
hex = "0.4.3"
cfg-if = "1.0"

[build-dependencies]
anyhow = "1.0.93"
vergen-git2 = { version = "1.0.1", default-features = false, features = [
    "build",
] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
