[package]
name = "athena-sdk"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.94"
athena-core = { path = "../core" }
athena-interface = { path = "../interface" }

[build-dependencies]
anyhow = "1.0.94"
vergen-git2 = { version = "1.0.2", default-features = false, features = [
    "build",
] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
