[package]
name = "athcon-vmlib"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
athcon-sys = { path = "../athcon/bindings/rust/athcon-sys" }
