[package]
name = "contract_template"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
athena-interface = { git = "https://github.com/athenavm/athena", tag = "v0.6.3" }
athena-vm = { git = "https://github.com/athenavm/athena", tag = "v0.6.3" }
athena-vm-declare = { git = "https://github.com/athenavm/athena", tag = "v0.6.3" }
athena-vm-sdk = { git = "https://github.com/athenavm/athena", tag = "v0.6.3" }

[dev-dependencies]
contract_template = { path = ".", features = ["unittest"] }
athena-sdk = { git = "https://github.com/athenavm/athena", tag = "v0.6.3" }
athena-runner = { git = "https://github.com/athenavm/athena", tag = "v0.6.3" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
athena-builder = { git = "https://github.com/athenavm/athena", tag = "v0.6.3" }

# Required to automatically build the VM program in unittests
# Used in build.rs
[features]
unittest = []

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
