[package]
name = "contract_template"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
athena-interface = { path = "../../interface" }
athena-vm = { path = "../../vm/entrypoint" }
athena-vm-declare = { path = "../../vm/declare" }
athena-vm-sdk = { path = "../../vm/sdk" }

[dev-dependencies]
contract_template = { path = ".", features = ["unittest"] }
athena-sdk = { path = "../../sdk" }
athena-runner = { path = "../../runner" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
athena-builder = { path = "../../builder/" }

# Required to automatically build the VM program in unittests
# Used in build.rs
[features]
unittest = []

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
