[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", rev = "3c0dae88", package = "sp1-zkvm" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[[bin]]
name = "test_program"
path = "src/main.rs"
