[package]
name = "ffitest"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]

[dev-dependencies]
athcon-client = { path = "../athcon/bindings/rust/athcon-client" }
athcon-sys = { path = "../athcon/bindings/rust/athcon-sys" }
athena-vmlib = { path = "../vmlib" }
hex = "0.4"
