[package]
name = "athena-vmlib"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
athcon-declare = { path = "../athcon/bindings/rust/athcon-declare" }
athena-interface = { path = "../../interface" }
athena-runner = { path = "../../runner" }
athcon-sys = { path = "../athcon/bindings/rust/athcon-sys" }
athcon-vm = { path = "../athcon/bindings/rust/athcon-vm" }
anyhow = "1.0.83"
thiserror = "1.0.60"
serde = { version = "1.0", features = ["derive", "rc"] }

[[bin]]
name = "test"
path = "src/test.rs"
