[package]
name = "athena-vmlib"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
athcon-declare = { path = "../athcon/bindings/rust/athcon-declare" }
athena-interface = { path = "../../interface" }
athena-runner = { path = "../../runner" }
athcon-sys = { path = "../athcon/bindings/rust/athcon-sys" }
athcon-vm = { path = "../athcon/bindings/rust/athcon-vm" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
athena-vmlib = { path = ".", features = ["unittest"] }

[build-dependencies]
athena-builder = { path = "../../builder" }

[features]
unittest = []
