[package]
name = "athena-vm"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
athena-precompiles = { path = "../precompiles" }
bincode = "1.3.3"
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["custom"] }
serde = { version = "1.0.201", features = ["derive"] }
rand = "0.8.5"

[features]
interface = []
rv32e = []
verify = []
