[package]
name = "athena-vm"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
athena-hostfunctions = { path = "../hostfunctions" }
athena-interface = { path = "../../interface" }
athena-precompiles = { path = "../precompiles" }
bincode = "1.3.3"
bytemuck = "1.7.0"
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["custom"] }
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
lazy_static = "1.5.0"

[features]
interface = []
rv32e = []
