[package]
name = "athena-vm"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
athena-interface = { path = "../../interface" }
bincode = "1.3.3"
bytemuck = "1.19.0"
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["custom"] }
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8.5"

# optional
athena-lib = { path = "../lib", optional = true }

[features]
default = ["lib"]
lib = ["dep:athena-lib"]
rv32e = []
