[package]
name = "athena-lib"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3.3"
cfg-if = "1.0.0"
serde = { version = "1.0.214", features = ["derive"] }
parity-scale-codec = "3.6.12"
