[package]
name = "athena-vm-sdk"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
athena-vm = { path = "../entrypoint" }
athena-interface = { path = "../../interface" }
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
