[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci-script"

[dependencies]
athena-sdk = { path = "../../../sdk" }
tracing-subscriber = "0.3.18"

[build-dependencies]
athena-helper = { path = "../../../helper" }

[[bin]]
name = "fibonacci-script"
path = "src/main.rs"
