[package]
version = "0.1.0"
name = "wallet-template"
edition = "2021"

[dependencies]
athena-vm = { path = "../../../vm/entrypoint", features = ["rv32e"] }
athena-vm-sdk = { path = "../../../vm/sdk" }
ed25519-dalek = "2.1.1"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
wallet-common = { path = "../common" }
