[package]
version = "0.1.0"
name = "wallet-template"
edition = "2021"

[dependencies]
athena-interface = { path = "../../../interface" }
athena-vm = { path = "../../../vm/entrypoint", features = [
  "noentrypoint",
  "rv32e",
] }
athena-vm-declare = { path = "../../../vm/declare" }
athena-vm-sdk = { path = "../../../vm/sdk" }
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
ed25519-dalek = "2.1.1"

[profile.release]
lto = false
