[package]
version = "0.1.0"
name = "wallet-script"
edition = "2021"
default-run = "execute"

[[bin]]
name = "execute"
path = "src/bin/execute.rs"

[dependencies]
athena-interface = { path = "../../../interface" }
athena-sdk = { path = "../../../sdk" }
athena-vm-sdk = { path = "../../../vm/sdk" }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
borsh = "1.5.1"
tracing-subscriber = "0.3.18"

[build-dependencies]
athena-helper = { path = "../../../helper" }
