[package]
version = "0.1.0"
name = "wallet-script"
edition = "2021"
default-run = "execute"

[[bin]]
name = "execute"
path = "src/bin/execute.rs"

[dependencies]
athena-interface = { path = "../../../interface" }
athena-sdk = { path = "../../../sdk" }
athena-vm-sdk = { path = "../../../vm/sdk" }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
athena-runner = { path = "../../../runner" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"

[build-dependencies]
athena-builder = { path = "../../../builder" }
