[package]
version = "0.1.0"
name = "wallet-script"
edition = "2021"

[dependencies]
athena-interface = { path = "../../../interface" }
athena-sdk = { path = "../../../sdk" }
athena-vm-sdk = { path = "../../../vm/sdk" }
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.41"
blake3 = "1.5.5"

[dev-dependencies]
athena-runner = { path = "../../../runner" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"

[build-dependencies]
athena-helper = { path = "../../../helper" }
