[package]
name = "athcon-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
athena-vmlib = { path = "../../../../vmlib" }
athcon-sys = { path = "../athcon-sys" }
athcon-vm = { path = "../athcon-vm" }
enum_primitive = "0.1.1"
num = "0.4"

[dev-dependencies]
hex = "0.4.3"
athena-interface = { path = "../../../../../interface" }
