[package]
name = "athcon-declare"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
quote = "1.0"
heck = "0.5.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
# For documentation examples
athcon-vm = { path = "../athcon-vm" }

[lib]
proc-macro = true
