[package]
name = "athcon-vm"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
athcon-sys = { path = "../athcon-sys" }
athena-interface = { path = "../../../../../interface" }
athena-vm-sdk = { path = "../../../../../vm/sdk", default-features = false }

[dev-dependencies]
parity-scale-codec = "3.7.0"
